# BCM

./: LICENSE  README.md  pyproject.toml  test.sh
config/: coco.yaml  pascal.yaml
src/: bcm.py  test.py  util.py
src/dataset/: dataset.py
